# rulemorph

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  server.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: release-cli.yml
crates/rulemorph/: Cargo.toml
crates/rulemorph/benches/: transform_bench.rs
crates/rulemorph/src/: dto.rs  error.rs  lib.rs  model.rs  transform.rs  v2_eval.rs  v2_model.rs  v2_parser.rs  v2_validator.rs  validator.rs
crates/rulemorph/tests/: array_ops_overflow_32bit.rs  dto_golden.rs  performance.rs  preflight.rs  record_when.rs  transform_golden.rs  transform_record.rs  v1_pipe_ref.rs  v2_conditions.rs  v2_lookup_missing.rs  v2_map_op.rs  v2_missing.rs  validation.rs
crates/rulemorph/tests/fixtures/dto02_steps/: expected_rust.rs  rules.yaml
crates/rulemorph/tests/fixtures/p02_preflight_missing_required/: input.json  rules.yaml
crates/rulemorph/tests/fixtures/p03_preflight_type_cast_failed/: input.json  rules.yaml
crates/rulemorph/tests/fixtures/p05_preflight_finalize_sort_missing/: expected_error.json  input.json  rules.yaml
crates/rulemorph/tests/fixtures/r08_json_ops_from_entries_single_pair/: input.json
crates/rulemorph/tests/fixtures/r09_asserts_failed/: expected_error.json  input.json  rules.yaml
crates/rulemorph/tests/fixtures/t26_chain_all_ops/: expected.json
crates/rulemorph/tests/fixtures/t27_json_ops_from_entries/: input.json  rules.yaml
crates/rulemorph/tests/fixtures/t28_expr_chain_nested/: expected.json  input.json  rules.yaml
crates/rulemorph/tests/fixtures/t29_json_ops_len/: expected.json
crates/rulemorph/tests/fixtures/tv22_basic/: context.json  expected.json  input.json  rules.yaml
crates/rulemorph/tests/fixtures/tv23_steps/: expected.json  input.json  rules.yaml
crates/rulemorph/tests/fixtures/tv24_conditions/: expected.json  input.json  rules.yaml
crates/rulemorph/tests/fixtures/tv25_lookup/: context.json  expected.json  input.json  rules.yaml
crates/rulemorph/tests/fixtures/tv26_v01_unknown_op/: rules.yaml
crates/rulemorph/tests/fixtures/tv26_v02_forward_out_ref/: expected_errors.json  rules.yaml
crates/rulemorph/tests/fixtures/tv26_v03_literal_start_unknown_op/: expected_errors.json  rules.yaml
crates/rulemorph/tests/fixtures/tv26_v04_empty_pipe/: expected_errors.json  rules.yaml
crates/rulemorph/tests/fixtures/tv26_v05_branch_when_v1_non_bool/: expected_errors.json  rules.yaml
crates/rulemorph/tests/fixtures/tv27_v1_compat/: context.json  expected.json  input.json  rules.yaml
crates/rulemorph/tests/fixtures/tv28_map_let_binding/: expected.json  input.json  rules.yaml
crates/rulemorph/tests/fixtures/tv29_v2_out_sibling_ok/: rules.yaml
crates/rulemorph/tests/fixtures/tv30_literal_escape/: expected.json  input.json  rules.yaml
crates/rulemorph/tests/fixtures/tv31_v2_json_ops_pick_omit_reduce_fold/: expected.json  input.json  rules.yaml
crates/rulemorph/tests/fixtures/tv32_steps_finalize/: expected.json  input.json  rules.yaml
crates/rulemorph/tests/fixtures/tv33_branch_return/: expected.json  high.yaml  input.json  low.yaml  rules.yaml
crates/rulemorph/tests/fixtures/tv34_branch_return_true/: else.yaml  expected.json  input.json  rules.yaml  then.yaml
crates/rulemorph/tests/fixtures/tv35_finalize_wrap/: expected.json  input.json
crates/rulemorph/tests/fixtures/tv36_branch_uses_out/: else.yaml  expected.json  input.json  rules.yaml  then.yaml
crates/rulemorph/tests/fixtures/tv37_root_refs/: context.json  expected.json  input.json  rules.yaml
crates/rulemorph/tests/fixtures/tv38_finalize_filter_offset/: expected.json  input.json  rules.yaml
crates/rulemorph/tests/fixtures/tv39_finalize_filter_index/: expected.json  (+2 more)
crates/rulemorph_cli/: Cargo.toml
crates/rulemorph_cli/src/: main.rs
crates/rulemorph_cli/tests/: branch_relative.rs  cli.rs
crates/rulemorph_endpoint/: Cargo.toml
crates/rulemorph_endpoint/src/: endpoint_engine.rs  lib.rs
crates/rulemorph_endpoint/tests/: rules_dir_validation.rs
crates/rulemorph_mcp/: Cargo.toml
crates/rulemorph_mcp/src/: main.rs
crates/rulemorph_mcp/tests/: stdio.rs
crates/rulemorph_server/: Cargo.toml
crates/rulemorph_server/src/: api_graph.rs  lib.rs  main.rs  server.rs
crates/rulemorph_trace/: Cargo.toml
crates/rulemorph_trace/src/: lib.rs  trace_store.rs
crates/rulemorph_ui/: Cargo.toml
crates/rulemorph_ui/src/: api_graph.rs  endpoint_engine.rs  lib.rs  main.rs  server.rs  trace_store.rs  trace_watch.rs
crates/rulemorph_ui/tests/: rules_dir_validation.rs
crates/rulemorph_ui/ui/: index.html  package-lock.json  package.json  vite.config.ts
crates/rulemorph_ui/ui/src/: App.tsx  main.tsx  styles.css  view_mode.ts
crates/rulemorph_ui/ui/src/__tests__/: overview_graph_error.test.ts  view_mode.test.ts
crates/transform_rules/: Cargo.toml
crates/transform_rules/src/: dto.rs  lib.rs  transform.rs  validator.rs
crates/transform_rules/tests/: preflight.rs  transform_golden.rs  validation.rs
crates/transform_rules/tests/fixtures/p01_preflight_ok/: input.json  rules.yaml
crates/transform_rules/tests/fixtures/p02_preflight_missing_required/: expected_error.json
crates/transform_rules/tests/fixtures/r08_json_ops_from_entries_single_pair/: expected_error.json  rules.yaml
crates/transform_rules/tests/fixtures/t26_chain_all_ops/: expected.json  input.json  rules.yaml
crates/transform_rules/tests/fixtures/t27_json_ops_from_entries/: expected.json
crates/transform_rules/tests/fixtures/t29_json_ops_len/: input.json  rules.yaml
crates/transform_rules_cli/: Cargo.toml
crates/transform_rules_cli/src/: main.rs
crates/transform_rules_cli/tests/: cli.rs
crates/transform_rules_mcp/: Cargo.toml
crates/transform_rules_mcp/src/: main.rs
docs/: ROADMAP.md  glossary.md  golden_tests.md  rules_spec_en.md  rules_spec_endpoint_ja.md  rules_spec_ja.md  rules_spec_network_ja.md  spec_v1.md
docs/guide/: ui-data-dir-usage-en.md  ui-data-dir-usage.md  ui-run-and-verify-en.md  ui-run-and-verify.md
mcp/: manifest.json.template
(+16 files in other folders)
