[package]
name = "rulemorph_cli"
version = "0.1.5"
edition = "2024"
license = "MIT"
description = "CLI for YAML-based declarative data transformation"
repository = "https://github.com/vinhphatfsg/rulemorph"
keywords = ["transform", "yaml", "json", "csv", "cli"]
categories = ["command-line-utilities"]

[[bin]]
name = "rulemorph"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde_json = "1.0"
rulemorph = { path = "../rulemorph" }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.10"
