[package]
name = "rulemorph_endpoint"
version = "0.2.2"
edition = "2024"
license = "MIT"
description = "Endpoint/network rule engine for rulemorph"
repository = "https://github.com/vinhphatfsg/rulemorph"
keywords = ["transform", "yaml", "api", "endpoint"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0"
axum = { version = "0.7" }
chrono = "0.4"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
rulemorph = { path = "../rulemorph" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "time", "sync", "net", "io-util"] }
tracing = "0.1"
url = "2.5"
uuid = { version = "1.8", features = ["v4"] }

[dev-dependencies]
tempfile = "3.10"
