[package]
name = "rulemorph_mcp"
version = "0.2.1"
edition = "2024"
license = "MIT"
description = "MCP server for YAML-based declarative data transformation"
repository = "https://github.com/vinhphatfsg/rulemorph"
keywords = ["transform", "yaml", "mcp", "ai", "claude"]
categories = ["command-line-utilities"]

[[bin]]
name = "rulemorph-mcp"
path = "src/main.rs"

[dependencies]
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
rulemorph = { path = "../rulemorph" }

[dev-dependencies]
tempfile = "3.10"
