[package]
name = "rulemorph_trace"
version = "0.2.2"
edition = "2024"
license = "MIT"
description = "Trace storage and watcher utilities for rulemorph"
repository = "https://github.com/vinhphatfsg/rulemorph"
keywords = ["transform", "trace", "observability"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0"
notify = "6.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "sync", "time"] }
tracing = "0.1"
walkdir = "2.5"
