[package]
name = "transform_rules"
version = "0.1.5"
edition = "2024"
license = "MIT"
description = "YAML-based declarative data transformation engine for CSV/JSON to JSON"
repository = "https://github.com/vinhphatfsg/transform-rules-rs"
keywords = ["transform", "yaml", "json", "csv", "etl"]
categories = ["command-line-utilities", "data-structures", "encoding"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
csv = "1.3"
regex = "1.12"
chrono = "0.4"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "transform_bench"
harness = false