[package]
name = "transform_rules_mcp"
version = "0.1.5"
edition = "2024"
license = "MIT"
description = "MCP server for YAML-based declarative data transformation"
repository = "https://github.com/vinhphatfsg/transform-rules-rs"
keywords = ["transform", "yaml", "mcp", "ai", "claude"]
categories = ["command-line-utilities"]

[[bin]]
name = "transform-rules-mcp"
path = "src/main.rs"

[dependencies]
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
transform_rules = { path = "../transform_rules" }

[dev-dependencies]
tempfile = "3.10"
